[package]
name = "inat"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.13", features = ["derive", "env"] }
reqwest = { version = "0.12.5", features = ["deflate", "gzip", "zstd", "brotli"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.122"
thiserror = "1.0.63"
tokio = { version = "1.39.2", features = ["macros", "rt-multi-thread"] }
url = "2.5.2"
