[package]
name = "inat"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.13", features = ["derive", "env"] }
httpdate = "1.0.3"
reqwest = { version = "0.12.5", features = ["deflate", "gzip", "zstd", "brotli"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.122"
serde_yaml = "0.9.34"
thiserror = "1.0.63"
tokio = { version = "1.39.2", features = ["macros", "rt-multi-thread"] }
tokio-util = "0.7.11"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
url = "2.5.2"
